...
                contentDescription = "Logo Gawean"
            )
            Column(
                horizontalAlignment = Alignment.CenterHorizontally
            ){
                Text(
                    text = "Selamat datang di Gawean",
                    style = MaterialTheme.typography.h6,
                    fontWeight = W600,
                    lineHeight = 30.sp,
                    color = Gray900,
                )
                Text(
                    text = "Daftar atau masuk agar bisa atur tugas lebih mudah dan selalu produktif.",
                    style = MaterialTheme.typography.subtitle2,
                    fontWeight = W400,
                    color = Gray900,
                    textAlign = TextAlign.Center
                )
            }
...
