...
    }

    Column(
        modifier = Modifier
            .fillMaxSize()
            .background(Primary25)
            .testTag("container_sign_in")
            .padding(
                horizontal = 18.dp,
                vertical = 18.dp
            ),
    ) {
        if (state.isError) {
...
